# Boilerplate-Python

./: .env_example  .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  config.json  data.file  requirements.txt  setup.cfg  setup.py
sample/: __init__.py  core.py
sample/common/: config.py  log.py
