[metadata]
name = IMTorg_Sample
version = 0.1.2
author_email = information@mgmt-tech.org
url = https://github.com/IMTorgDemo/Boilerplate-Python
description = This is just a simple sample package.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires = 
    nose
    python-dotenv
    build
    requests

[options.package_data]
* = .env

[options.entry_points]
console_scripts = 
    sample = sample.core:main